--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 </head>
 
+
 <body id="myPage" data-spy="scroll">
 
   <!-- wrapper to cover the blank place on the top -->
@@ -119,7 +120,7 @@
     </div>
 
     <!-- -->
-    <div class="container">
+    <div class="container-fluid">
       <div id="mov-block" class="row">
         <div class="col-sm-12">
 
@@ -160,7 +161,7 @@
                       <div class="icon-wrapper"><span class="icon-backing">
                         <i class="fa fa-briefcase fa-4x" aria-hidden="true"></i>
                       </span></div>
-                      <p class="title1">ABOUT ME</p>
+                      <p class="title1">ABOUT US</p>
                       <p class="title2">FRONT END WEB DEVELOPER</p>
 
                     </div>
@@ -955,7 +956,7 @@
 
                 <li>
                   <i class="fa fa-laptop" aria-hidden="true"></i>
-                  <span>https://hillenlin.github.io/webDevelopment/</span>
+                  <span>0423 967 486</span>
                 </li>
               </ul>
             </div>
@@ -1120,36 +1121,35 @@
       <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPV5hAa7xViDjCYzRfNxbq-Q-DVPHtq4I&callback=initMap"></script> -->
     </div>
   </div>
-  <!-- end of contact section -->
+  <!-- end of cobtact section -->
 
   <footer class="container-fluid text-center">
-  <div id="scroll-circle">
-    <a href="#myPage" title="To Top">
-      <span  class="glyphicon glyphicon-chevron-up"></span>
-    </a>
-  </div>
-  <div id="footer-wrapper" class="row">
-    <div class="col-md-4">COPYRIGHT © Kevin Lin 2017</div>
-    <div class="col-md-4">
-      <a href="https://au.linkedin.com/in/zhangfeng-kevin-lin-9b61ab115" target="_blank">
-        <img class="media-wrapper-footer" src="images/linkedin.svg"/>
+    <div id="scroll-circle">
+      <a href="#myPage" title="To Top">
+        <span  class="glyphicon glyphicon-chevron-up"></span>
       </a>
-      <a href="https://www.seek.com.au/" target="_blank">
-        <img class="media-wrapper-footer" src="images/seek.svg"/>
-      </a>
-      <a href="https://github.com/HillenLin" target="_blank">
-        <img class="media-wrapper-footer" src="images/github.svg"/>
+    </div>
+    <div id="footer-wrapper" class="row">
+      <div class="col-md-4">COPYRIGHT © Kevin Lin 2017</div>
+      <div class="col-md-4">
+        <a href="https://au.linkedin.com/in/zhangfeng-kevin-lin-9b61ab115" target="_blank">
+          <img class="media-wrapper-footer" src="images/linkedin.svg"/>
+        </a>
+        <a href="https://www.seek.com.au/" target="_blank">
+          <img class="media-wrapper-footer" src="images/seek.svg"/>
+        </a>
+        <a href="https://github.com/HillenLin" target="_blank">
+          <img class="media-wrapper-footer" src="images/github.svg"/>
       </a>
       <a href="mailto:linzhangfeng123@gmail.com" href="#gmail">
         <img class="media-wrapper-footer" src="images/gmail.svg"/>
       </a>
-
+      </div>
+      <div class="col-md-4">Feel free to contact me if you need a website for your business</div>
     </div>
-    <div class="col-md-4">Feel free to contact me if you need a website for your business</div>
-  </div>
 
-</footer>
+  </footer>
 
 
-</body>
-</html>
+  </body>
+  </html>
