--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
 
     <!-- -->
-    <div class="container-fluid">
+    <div class="container">
       <div id="mov-block" class="row">
         <div class="col-sm-12">
 
