--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
 
                 <li>
                   <i class="fa fa-laptop" aria-hidden="true"></i>
-                  <span>https://hillenlin.github.io/PersonalPortfolioWeb/</span>
+                  <span>Kevin Lin</span>
                 </li>
               </ul>
             </div>
