--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 
               <span class="project-labels">
                 <h3>Website Url:</h3> <h4>Please click the following link to review my work</h4>
-                <span id="link-style" class="project-details">http://www.zakkahouseaustralia.com.au/</span>
+                <a id="link-style" class="project-details" target="_blank" href="http://www.zakkahouseaustralia.com.au/">http://www.zakkahouseaustralia.com.au/</a>
               </span>
             </div>
           </div>
@@ -557,7 +557,7 @@
 
               <span class="project-labels">
                 <h3>Website Url:</h3> <h4>Please click the following link to review my work</h4>
-                <span id="link-style" class="project-details">http://topstitchalterations.com.au/</span>
+                <a id="link-style" class="project-details" target="_blank" class="project-details" href="http://topstitchalterations.com.au/">http://topstitchalterations.com.au/</a>
               </span>
             </div>
           </div>
